2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 

	* data/sounds/notify.wav: Updated with a matching sound
	* data/sounds/send.wav, data/sounds/Makefile.am,
	  data/sounds/receive.wav, Banter/ChatWindow.cs: Added a send and
	  receive sound

2007-08-02  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Account.cs, Banter/GroupWindow.cs,
	  Banter/ProviderUserManager.cs, Banter/ProviderUser.cs: Added code
	  to support Invitation and Authorization

2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Fixed up audio button
	* Banter/PersonManager.cs: Removed status sort for now, race condition
	  is messing it up

2007-08-01  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/Conversation.cs: bug in requesting both audio and video stream
	  in SetupAudioVideoStream

2007-08-01  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/PersonCard.cs: Updated card to allow blank cards to be created
	  and set the Person later
	* Banter/PersonManager.cs: Added sorting to model
	* Banter/PersonView.cs: added updated model

2007-08-01  Brady Anderson <brady.anderson@gmail.com> 

	* Banter/NotificationManager.cs: removed VideoDown event
	* Banter/ChatType.cs: added calltype
	* Banter/ConversationManager.cs: work to support audio only support
	* Banter/ChatWindow.cs: support new events ex. Hangup
	* Banter/Conversation.cs: work to support audio only support, removed
	  some unecessary events

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* Banter/NotificationManager.cs: Added method to notify
	* Banter/ChatWindow.cs: Chat window now notifies of a text message if
	  it doesn't have the focus

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 

	* data/images/Makefile.am, data/images/mic.png, Banter/Makefile.am:
	  Added Mic graphic for audio calls
	* Banter/PersonCard.cs: Added Mic graphic for audio calls and ability
	  to make an audio only call

2007-07-31  Calvin Gaisford <calvinrg@gmail.com> 
