@@ -1,3 +1,8 @@
+2007-08-03  Brady Anderson <brady.anderson@gmail.com> 
+
+	* Banter/PersonCard.cs: Added code to support Invitation and
+	  Authorization
+
 2007-08-03  Calvin Gaisford <calvinrg@gmail.com> 
 
 	* data/sounds/notify.wav: Updated with a matching sound
